[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Sniglet-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Sniglet-ExtraBold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 34
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 283.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.84
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.894118, 0.858824, 0.564706, 1 )
text = "This Type of Reunion"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 287.0
margin_right = 1024.0
margin_bottom = 369.0
size_flags_horizontal = 5
size_flags_vertical = 3
size_flags_stretch_ratio = 0.83
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 82.0
size_flags_vertical = 3

[node name="Control2" type="Control" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 341.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.34

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 345.0
margin_right = 460.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.79
custom_fonts/font = SubResource( 2 )
text = "Type"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 464.0
margin_right = 559.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.65
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.827451, 1, 0.847059, 1 )
custom_colors/selection_color = Color( 0.482353, 1, 0.427451, 1 )
bbcode_enabled = true
tab_size = 1
fit_content_height = true
scroll_following = true

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 563.0
margin_right = 716.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.05
custom_fonts/font = SubResource( 2 )
text = "to begen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 720.0
margin_right = 1024.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 373.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.27

[node name="NextWordTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="finishedWord" from="." to="." method="_on_TitleScreen_finishedWord"]
